--- a/frontend/src/app/components/contact/contact.component.html
+++ b/frontend/src/app/components/contact/contact.component.html
@@ -30,7 +30,7 @@
             <i class="bi bi-telephone-fill"></i>
           </div>
           <h3>{{ 'contact.phone.title' | translate }}</h3>
-          <p><a href="tel:+15551234567">+1 (555) 123-4567</a></p>
+          <p><a href="tel:+15551234567">+970 595 466 383</a></p>
         </div>
 
         <div class="info-card">
