--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,6 +4,7 @@
       <!-- Logo -->
       <div class="logo">
         <a href="#home" (click)="scrollToSection('#home')">
+          <img src="assets/images/logo.png" alt="AS Hub Logo" class="logo-image">
           <span class="logo-text">AS Hub</span>
         </a>
       </div>
